# continuous-integration-demo

./: .gitignore  .gitmodules  .travis.yml  CMakeCPack.cmake  CMakeCPackConfig.cmake  CMakeLists.txt  Jenkinsfile  LICENSE  README.md
.circleci/: config.yml
docker/jenkins/: Dockerfile
docker/xenial-boost-gcc-clang-dev/: Dockerfile
docker/xenial-dev-complete/: Dockerfile  keyboard  startup.sh
include/: arithmetics.hpp
libs/arithmetics/: CMakeLists.txt
libs/arithmetics/include/: arithmetics.hpp
src/: CMakeLists.txt  arithmetics.cpp  main.cpp
test/: CMakeLists.txt  some_unit_test.cpp
test-catch/: CMakeLists.txt  another_unit_test.cpp  some_unit_test.cpp
test-googletest/: CMakeLists.txt  another_unit_test.cpp  some_unit_test.cpp
