add_executable (${CMAKE_PROJECT_NAME}
    main.cpp)

target_link_libraries(${CMAKE_PROJECT_NAME}
    arithmetics)

# install (PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME} DESTINATION bin)

INSTALL(TARGETS ${CMAKE_PROJECT_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)